@@ -74,8 +74,8 @@ class BaseResponse:
     def __eq__(self, other: Any) -> bool: ...
     def __ne__(self, other: Any) -> bool: ...
     def _req_attr_matches(
-        self, match: List[Callable[..., Any]], request_body: Optional[Union[bytes, str]]
-    ) -> bool: ...
+        self, match: List[Callable[..., Any]], request: Optional[Union[bytes, str]]
+    ) -> Tuple[bool, str]: ...
     def _should_match_querystring(
         self, match_querystring_argument: Union[bool, object]
     ) -> bool: ...
