@@ -898,7 +898,7 @@ def test_response_filebody():
         with responses.RequestsMock() as m:
             with open(current_file, "r") as out:
                 m.add(responses.GET, "http://example.com", body=out.read(), stream=True)
-                resp = requests.get("http://example.com")
+                resp = requests.get("http://example.com", stream=True)
             with open(current_file, "r") as out:
                 assert resp.text == out.read()
 
@@ -1558,31 +1558,72 @@ def test_request_matches_post_params():
 
 
 def test_request_matches_empty_body():
-    @responses.activate
     def run():
-        responses.add(
-            method=responses.POST,
-            url="http://example.com/",
-            body="one",
-            match=[matchers.json_params_matcher(None)],
-        )
+        with responses.RequestsMock(assert_all_requests_are_fired=True) as rsps:
+            # test that both json and urlencoded body are empty in matcher and in request
+            rsps.add(
+                method=responses.POST,
+                url="http://example.com/",
+                body="one",
+                match=[matchers.json_params_matcher(None)],
+            )
 
-        responses.add(
-            method=responses.POST,
-            url="http://example.com/",
-            body="two",
-            match=[matchers.urlencoded_params_matcher(None)],
-        )
+            rsps.add(
+                method=responses.POST,
+                url="http://example.com/",
+                body="two",
+                match=[matchers.urlencoded_params_matcher(None)],
+            )
 
-        resp = requests.request("POST", "http://example.com/")
-        assert_response(resp, "one")
+            resp = requests.request("POST", "http://example.com/")
+            assert_response(resp, "one")
 
-        resp = requests.request(
-            "POST",
-            "http://example.com/",
-            headers={"Content-Type": "x-www-form-urlencoded"},
-        )
-        assert_response(resp, "two")
+            resp = requests.request(
+                "POST",
+                "http://example.com/",
+                headers={"Content-Type": "x-www-form-urlencoded"},
+            )
+            assert_response(resp, "two")
+
+        with responses.RequestsMock(assert_all_requests_are_fired=False) as rsps:
+            # test exception raise if matcher body is None but request data is not None
+            rsps.add(
+                method=responses.POST,
+                url="http://example.com/",
+                body="one",
+                match=[matchers.json_params_matcher(None)],
+            )
+
+            with pytest.raises(ConnectionError) as excinfo:
+                resp = requests.request(
+                    "POST",
+                    "http://example.com/",
+                    json={"my": "data"},
+                    headers={"Content-Type": "application/json"},
+                )
+
+            msg = str(excinfo.value)
+            assert "request.body doesn't match: {my: data} doesn't match {}" in msg
+
+        with responses.RequestsMock(assert_all_requests_are_fired=False) as rsps:
+            rsps.add(
+                method=responses.POST,
+                url="http://example.com/",
+                body="two",
+                match=[matchers.urlencoded_params_matcher(None)],
+            )
+            with pytest.raises(ConnectionError) as excinfo:
+                resp = requests.request(
+                    "POST",
+                    "http://example.com/",
+                    headers={"Content-Type": "x-www-form-urlencoded"},
+                    data={"page": "second", "type": "urlencoded"},
+                )
+            msg = str(excinfo.value)
+            assert (
+                "request.body doesn't match: {page: second, type: urlencoded} doesn't match {}"
+                in msg
+            )
 
     run()
     assert_reset()
@@ -1622,75 +1663,110 @@ def test_request_matches_params():
 
 
 def test_fail_request_error():
-    @responses.activate
+    """
+    Validate that exception is raised if request URL/Method/kwargs don't match
+    :return:
+    """
+
     def run():
-        responses.add("POST", "http://example1.com")
-        responses.add("GET", "http://example.com")
-        responses.add(
-            "POST",
-            "http://example.com",
-            match=[matchers.urlencoded_params_matcher({"foo": "bar"})],
-        )
-        responses.add(
-            "POST",
-            "http://example.com",
-            match=[matchers.json_params_matcher({"fail": "json"})],
-        )
+        with responses.RequestsMock(assert_all_requests_are_fired=False) as rsps:
+            rsps.add("POST", "http://example1.com")
+            rsps.add("GET", "http://example.com")
 
-        with pytest.raises(ConnectionError) as excinfo:
-            requests.post("http://example.com", data={"id": "bad"})
+            with pytest.raises(ConnectionError) as excinfo:
+                requests.post("http://example.com", data={"id": "bad"})
 
-        msg = str(excinfo.value)
-        assert "- POST http://example1.com/ URL does not match" in msg
-        assert "- GET http://example.com/ Method does not match" in msg
+            msg = str(excinfo.value)
+            assert "- POST http://example1.com/ URL does not match" in msg
+            assert "- GET http://example.com/ Method does not match" in msg
 
-        if six.PY3:
-            assert "Parameters do not match. id=bad doesn't match {'foo': 'bar'}" in msg
-        else:
-            assert (
-                "Parameters do not match. id=bad doesn't match {u'foo': u'bar'}" in msg
+    run()
+    assert_reset()
+
+
+def test_fail_matchers_error():
+    """
+    Validate that Exception is raised if request does not match responses.matchers
+        validate matchers.urlencoded_params_matcher
+        validate matchers.json_params_matcher
+        validate matchers.query_param_matcher
+        validate matchers.request_kwargs_matcher
+    :return: None
+    """
+
+    def run():
+        with responses.RequestsMock(assert_all_requests_are_fired=False) as rsps:
+            rsps.add(
+                "POST",
+                "http://example.com",
+                match=[matchers.urlencoded_params_matcher({"foo": "bar"})],
+            )
+            rsps.add(
+                "POST",
+                "http://example.com",
+                match=[matchers.json_params_matcher({"fail": "json"})],
             )
 
-        assert (
-            "Parameters do not match. JSONDecodeError: Cannot parse request.body" in msg
-        )
+            with pytest.raises(ConnectionError) as excinfo:
+                requests.post("http://example.com", data={"id": "bad"})
 
-        # test query parameters
-        responses.add(
-            "GET",
-            "http://111.com",
-            match=[matchers.query_param_matcher({"my": "params"})],
-        )
-
-        responses.add(
-            method=responses.GET,
-            url="http://111.com/",
-            body="two",
-            match=[matchers.json_params_matcher({"page": "one"})],
-        )
-
-        with pytest.raises(ConnectionError) as excinfo:
-            requests.get("http://111.com", params={"id": "bad"}, json={"page": "two"})
-
-        msg = str(excinfo.value)
-        if six.PY3:
+            msg = str(excinfo.value)
             assert (
-                "Parameters do not match. [('id', 'bad')] doesn't match [('my', 'params')]"
+                "request.body doesn't match: {id: bad} doesn't match {foo: bar}" in msg
+            )
+
+            assert (
+                "request.body doesn't match: JSONDecodeError: Cannot parse request.body"
                 in msg
             )
+
+        with responses.RequestsMock(assert_all_requests_are_fired=False) as rsps:
+            rsps.add(
+                "GET",
+                "http://111.com",
+                match=[matchers.query_param_matcher({"my": "params"})],
+            )
+
+            rsps.add(
+                method=responses.GET,
+                url="http://111.com/",
+                body="two",
+                match=[matchers.json_params_matcher({"page": "one"})],
+            )
+
+            with pytest.raises(ConnectionError) as excinfo:
+                requests.get(
+                    "http://111.com", params={"id": "bad"}, json={"page": "two"}
+                )
+
+            msg = str(excinfo.value)
             assert (
-                """Parameters do not match. {"page": "two"} doesn't match {'page': 'one'}"""
+                "Parameters do not match. {id: bad} doesn't match {my: params}" in msg
+            )
+            assert (
+                "request.body doesn't match: {page: two} doesn't match {page: one}"
                 in msg
             )
-        else:
-            assert (
-                "Parameters do not match. [('id', 'bad')] doesn't match [(u'my', u'params')]"
-                in msg
+
+        with responses.RequestsMock(assert_all_requests_are_fired=False) as rsps:
+            req_kwargs = {
+                "stream": True,
+                "verify": False,
+            }
+            rsps.add(
+                "GET",
+                "http://111.com",
+                match=[matchers.request_kwargs_matcher(req_kwargs)],
             )
+
+            with pytest.raises(ConnectionError) as excinfo:
+                requests.get("http://111.com", stream=True)
+
+            msg = str(excinfo.value)
             assert (
-                """Parameters do not match. {"page": "two"} doesn't match {u'page': u'one'}"""
-                in msg
-            )
+                "Arguments don't match: "
+                "{stream: True, verify: True} doesn't match {stream: True, verify: False}"
+            ) in msg
 
     run()
     assert_reset()
@@ -1789,3 +1865,28 @@ def test_rfc_compliance(url, other_url):
 
     run()
     assert_reset()
+
+
+def test_matchers_create_key_val_str():
+    """
+    Test that matchers._create_key_val_str does recursive conversion
+    """
+    data = {
+        "my_list": [
+            1,
+            2,
+            "a",
+            {"key1": "val1", "key2": 2, 3: "test"},
+            "!",
+            [["list", "nested"], {"nested": "dict"}],
+        ],
+        1: 4,
+        "test": "val",
+        "high": {"nested": "nested_dict"},
+    }
+    conv_str = matchers._create_key_val_str(data)
+    reference = (
+        "{1: 4, high: {nested: nested_dict}, my_list: [!, 1, 2, [[list, nested], {nested: dict}], "
+        "a, {3: test, key1: val1, key2: 2}], test: val}"
+    )
+    assert conv_str == reference
